--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="w3-bar-item w3-button" onclick="Menu('Profil')">Profil</button>
     </div>
     <div id="unikomm" class="w3-container char w3-animate-fading" style="display: none;">
-        <h2>INFORMATIKA 2</h2>
+        <h2>GUMURUH</h2>
         <img src="css/unikomm.jpg" alt="unikom"> 
     </div>
 	
